--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^9.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.9.0",
     "styled-components": "^5.1.0"
   }
 }
